@@ -123,7 +123,7 @@ channelsnames[50] = "DMAX (S)";
 channels[50] = "S19.2E-133-33-63";
 channelsnames[51] = "Discovery (S)";
 channels[51] = "S28.2E-2-2009-6201";
-channelsnames[52] = "Discovery (S)";
+channelsnames[52] = "Discovery Ireland(S)";
 channels[52] = "S28.2E-2-2009-6210";
 channelsnames[53] = "Discovery+1 (S)";
 channels[53] = "S28.2E-2-2009-6204";
@@ -143,43 +143,43 @@ channelsnames[60] = "Disc.Turbo (S)";
 channels[60] = "S28.2E-2-2009-6209";
 channelsnames[61] = "Discovery Shed (S)";
 channels[61] = "S28.2E-2-2315-52440";
-channelsnames[62] = "Travel & Living (S)";
-channels[62] = "S28.2E-2-2009-6205";
-channelsnames[63] = "Home & Health (S)";
-channels[63] = "S28.2E-2-2009-6208";
-channelsnames[64] = "Home&Health+ (S)";
-channels[64] = "S28.2E-2-2315-52450";
-channelsnames[65] = "Investigation (S)";
-channels[65] = "S28.2E-2-2315-52400";
-channelsnames[66] = "Investigation+1 (S)";
-channels[66] = "S28.2E-2-2315-52426";
-channelsnames[67] = "DMAX (S)";
-channels[67] = "S28.2E-2-2315-52415";
-channelsnames[68] = "DMAX+1 (S)";
-channels[68] = "S28.2E-2-2315-52420";
-channelsnames[69] = "QUEST (S)";
-channels[69] = "S28.2E-2-2009-6211";
-channelsnames[70] = "QUEST+1 (S)";
-channels[70] = "S28.2E-2-2315-52430";
-channelsnames[71] = "Animal Planet (S)";
-channels[71] = "S28.2E-2-2009-6202";
-channelsnames[72] = "Animal Plnt+1 (S)";
-channels[72] = "S28.2E-2-2315-52405";
-channelsnames[73] = "Eden (S)";
-channels[73] = "S28.2E-2-2006-6502";
-channelsnames[74] = "Eden+1 (S)";
-channels[74] = "S28.2E-2-2015-7610";
-channelsnames[75] = "YESTERDAY (S)";
-channels[75] = "S28.2E-2-2006-6505";
-channelsnames[76] = "YESTERDAY+1 (S)";
-channels[76] = "S28.2E-2-2015-7650";
-channelsnames[77] = "Blighty (S)";
-channels[77] = "S28.2E-2-2006-6522";
-channelsnames[78] = "Bio (S)";
-channels[78] = "S28.2E-2-2408-4655";
-channelsnames[79] = "Crime (S)";
-channels[79] = "S28.2E-0-211604-4802";
-channelsnames[80] = "Crime+1 (S)";
+
+channelsnames[62] = "Home & Health (S)";
+channels[62] = "S28.2E-2-2009-6208";
+channelsnames[63] = "Home&Health+ (S)";
+channels[63] = "S28.2E-2-2315-52450";
+channelsnames[64] = "ID (S)";
+channels[64] = "S28.2E-2-2315-52400";
+channelsnames[65] = "ID+1 (S)";
+channels[65] = "S28.2E-2-2315-52426";
+channelsnames[66] = "DMAX (S)";
+channels[66] = "S28.2E-2-2315-52415";
+channelsnames[67] = "DMAX+1 (S)";
+channels[67] = "S28.2E-2-2315-52420";
+channelsnames[68] = "QUEST (S)";
+channels[68] = "S28.2E-2-2009-6211";
+channelsnames[69] = "QUEST+1 (S)";
+channels[69] = "S28.2E-2-2315-52430";
+channelsnames[70] = "Animal Planet (S)";
+channels[70] = "S28.2E-2-2009-6202";
+channelsnames[71] = "Animal Plnt+1 (S)";
+channels[71] = "S28.2E-2-2315-52405";
+channelsnames[72] = "Eden (S)";
+channels[72] = "S28.2E-2-2006-6502";
+channelsnames[73] = "Eden+1 (S)";
+channels[73] = "S28.2E-2-2015-7610";
+channelsnames[74] = "YESTERDAY (S)";
+channels[74] = "S28.2E-2-2006-6505";
+channelsnames[75] = "YESTERDAY+1 (S)";
+channels[75] = "S28.2E-2-2015-7650";
+channelsnames[76] = "Blighty (S)";
+channels[76] = "S28.2E-2-2006-6522";
+channelsnames[77] = "Bio (S)";
+channels[77] = "S28.2E-2-2408-4655";
+
+channelsnames[79] = "CI (S)";
+channels[79] = "S28.2E-2-2408-4802";
+channelsnames[80] = "CI+1 (S)";
 channels[80] = "S28.2E-2-2301-52169";
 channelsnames[81] = "History (S)";
 channels[81] = "S28.2E-2-2408-4653";
@@ -212,18 +212,20 @@ channelsnames[107] = "Sky DramaRom (S)";
 channels[107] = "S28.2E-2-2007-5502";
 channelsnames[108] = "Sky ScFi/Horror (S)";
 channels[108] = "S28.2E-2-2007-4304";
-channelsnames[109] = "Sky Greats (S)";
+channelsnames[109] = "Sky Superhero (S)";
 channels[109] = "S28.2E-2-2007-5650";
-channelsnames[110] = "Sky Classics (S)";
-channels[110] = "S28.2E-2-2007-4305";
-channelsnames[111] = "TCM (S)";
-channels[111] = "S28.2E-2-2403-6038";
-channelsnames[112] = "TCM 2 (S)";
-channels[112] = "S28.2E-2-2021-5522";
-channelsnames[113] = "Movies 24 (S)";
-channels[113] = "S28.2E-2-2303-52265";
-channelsnames[114] = "Movies 24+ (S)";
-channels[114] = "S28.2E-2-2303-52270";
+channelsnames[110] = "Sky Select (S)";
+channels[110] = "S28.2E-2-2007-4306";
+channelsnames[111] = "Sky Disney (S)";
+channels[111] = "S28.2E-2-2007-4308";
+channelsnames[112] = "TCM (S)";
+channels[112] = "S28.2E-2-2403-6038";
+channelsnames[113] = "TCM 2 (S)";
+channels[113] = "S28.2E-2-2021-5522";
+channelsnames[114] = "Movies 24 (S)";
+channels[114] = "S28.2E-2-2303-52265";
+channelsnames[115] = "Movies 24+ (S)";
+channels[115] = "S28.2E-2-2303-52270";
 
 channelsnames[150] = "RTL Crime (S)";
 channels[150] = "S19.2E-133-1-27";
@@ -257,9 +259,9 @@ channelsnames[164] = "alibi (S)";
 channels[164] = "S28.2E-2-2006-6521";
 channelsnames[165] = "alibi +1 (S)";
 channels[165] = "S28.2E-2-2015-7630";
-channelsnames[166] = "FX (S)";
+channelsnames[166] = "FOX (S)";
 channels[166] = "S28.2E-2-2021-5515";
-channelsnames[167] = "FX+ (S)";
+channelsnames[167] = "FOX+1 (S)";
 channels[167] = "S28.2E-2-2023-5402";
 channelsnames[168] = "Watch (S)";
 channels[168] = "S28.2E-2-2006-6520";
@@ -271,11 +273,11 @@ channels[201] = "S28.2E-2-2045-6301";
 channelsnames[202] = "BBC 2 England (S)";
 channels[202] = "S28.2E-2-2045-6302";
 channelsnames[203] = "BBC THREE (S)";
-channels[203] = "S28.2E-2-2045-6319";
+channels[203] = "S28.2E-2-2048-10351";
 channelsnames[204] = "BBC FOUR (S)";
-channels[204] = "S28.2E-2-2047-6416";
+channels[204] = "S28.2E-2-2045-6316";
 channelsnames[205] = "BBC NEWS (S)";
-channels[205] = "S28.2E-2-2047-6405";
+channels[205] = "S28.2E-2-2048-10358";
 channelsnames[206] = "BBC PARL'MNT (S)";
 channels[206] = "S28.2E-2-2046-10307";
 channelsnames[211] = "ITV1 London HD (S)";
@@ -349,11 +351,11 @@ channels[248] = "S28.2E-2-2412-51116";
 channelsnames[249] = "mov4men+1 (S)";
 channels[249] = "S28.2E-2-2412-51118";
 channelsnames[250] = "True Ent (S)";
-channels[250] = "S28.2E-2-2410-52375";
+channels[250] = "S28.2E-2-2314-53375";
 channelsnames[251] = "True Movies 1 (S)";
-channels[251] = "S28.2E-2-2410-52320";
+channels[251] = "S28.2E-2-2314-53320";
 channelsnames[252] = "True Movies 2 (S)";
-channels[252] = "S28.2E-2-2410-52325";
+channels[252] = "S28.2E-2-2314-53325";
 channelsnames[253] = "RTE One (S)";
 channels[253] = "S28.2E-2-2043-9601";
 channelsnames[254] = "RTE TWO (S)";
@@ -362,8 +364,7 @@ channelsnames[255] = "Setanta Ireland (S)";
 channels[255] = "S28.2E-2-2412-51111";
 channelsnames[256] = "Setanta Sports1 (S)";
 channels[256] = "S28.2E-2-2412-51112";
-channelsnames[260] = "Sky Indie (S)";
-channels[260] = "S28.2E-2-2007-4306";
+
 channelsnames[261] = "E! (S)";
 channels[261] = "S28.2E-2-2313-53200";
 channelsnames[262] = "Sky1 (S)";
@@ -424,9 +425,9 @@ channelsnames[289] = "Horse & Country (S)";
 channels[289] = "S28.2E-2-2602-54140";
 
 channelsnames[300] = "CBBC Channel (S)";
-channels[300] = "S28.2E-2-2045-6317";
+channels[300] = "S28.2E-2-2048-10352";
 channelsnames[301] = "CBeebies (S)";
-channels[301] = "S28.2E-2-2047-6418";
+channels[301] = "S28.2E-2-2045-6318";
 channelsnames[302] = "CITV (S)";
 channels[302] = "S28.2E-2-2044-10071";
 channelsnames[303] = "KiKA (S)";
