@@ -6,6 +6,7 @@ VDR 1.7.29
 0.22	Updated EPG filter for 42E
 	Fix: Right month is now shown in recordings menu.
 	Added some channels for 42E to group 3
+	Updated UK channels
 	SmartwebTV timer handling added
 	Info about audio/video in Infobox when playing Recording
 
